--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
+    "dotenv": "^17.2.3",
     "embla-carousel-react": "^8.3.0",
     "framer-motion": "^12.23.12",
     "input-otp": "^1.2.4",
@@ -63,6 +64,7 @@
     "lucide-react": "^0.462.0",
     "mongodb": "^6.3.0",
     "next-themes": "^0.3.0",
+    "node-fetch": "^3.3.2",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
     "react-day-picker": "^8.10.1",
