--- a/server/package.json
+++ b/server/package.json
@@ -8,9 +8,9 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "dotenv": "^16.6.1",
     "mongodb": "^6.3.0",
-    "node-fetch": "^3.3.2",
-    "dotenv": "^16.3.1"
+    "node-fetch": "^3.3.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
